[gd_scene load_steps=2 format=3 uid="uid://djd68yuw8h6mi"]

[ext_resource type="Script" uid="uid://dq6523jaeacb7" path="res://scenes/game_object/enemy/attack_manager/attack_manager.gd" id="1_wwx0i"]

[node name="attack_manager" type="Node"]
script = ExtResource("1_wwx0i")

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true

[node name="delay_timer" type="Timer" parent="."]
one_shot = true

[node name="recover_timer" type="Timer" parent="."]
one_shot = true
